--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lekaba Application</title>
+    <title>LeKaba Application</title>
 		<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 		<link rel="shortcut icon" href="/favicon.png">
 </head>
-<body>
+<body style="margin: 0;">
     <div id="root"></div>
     <noscript>
         Please enable JavaScript to view this site.
